--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.thevipershow</groupId>
     <artifactId>GeomVectorLib</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
 
     <build>
         <defaultGoal>clean package</defaultGoal>
